feat: various update, can work now

--- a/src/tf2_gui_tools/CMakeLists.txt
+++ b/src/tf2_gui_tools/CMakeLists.txt
@@ -6,6 +6,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
@@ -13,14 +14,17 @@ list(APPEND CMAKE_AUTOUIC_SEARCH_PATHS ui)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(tf2_msgs REQUIRED)
+find_package(tf2_eigen REQUIRED)
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
+
+string(TOUPPER $ENV{ROS_DISTRO} ROS_DISTRO)
+add_definitions(-DROS_DISTRO_${ROS_DISTRO})
 
 include_directories(include)
 
-add_executable(main src/main.cc src/mainwindow.cc src/comm_node.cc)
+add_executable(main src/main.cc src/mainwindow.cc src/comm_node.cc res/resources.qrc)
 target_link_libraries(main Qt5::Widgets)
-ament_target_dependencies(main rclcpp tf2_msgs)
+ament_target_dependencies(main rclcpp tf2_eigen)
 
 install(
   TARGETS main
